<resources>
    <string name="app_name">TFG</string>
    <string name="cultura_general">cultura general</string>
    <string name="geografia">geografia</string>
    <string name="historia">historia</string>
    <string name="todo">TODO</string>
    <string name="corregir">Corregir</string>
    <string name="selector_de_tema">Selector de Tema</string>
    <string name="selector_de_dificultad">Selector de Dificultad</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="e_mail">e-mail</string>
    <string name="password">Password</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="idusuario">idUsuario</string>
    <string name="fecha_y_hora">Fecha y hora</string>
    <string name="aciertos">Aciertos</string>
    <string name="fallos">Fallos</string>
    <string name="preguntas">Preguntas</string>
    <string name="resputas">Resputas</string>
</resources>