<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2965ed"
    tools:context=".Fragments.Selectores.SelectorNivel">

    <!-- TODO: Update blank fragment layout -->
    <ImageButton
        android:id="@+id/btNivel1"
        android:layout_width="397dp"
        android:layout_height="188dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#2965ed"
        android:contentDescription="@string/geografia"
        android:scaleType="fitCenter"
        android:src="@drawable/icono_n1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btNivel2"
        android:layout_width="397dp"
        android:layout_height="188dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#2965ed"
        android:contentDescription="@string/cultura_general"
        android:scaleType="fitCenter"
        android:src="@drawable/icono_n2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNivel1"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btNivel3"
        android:layout_width="397dp"
        android:layout_height="188dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="#2965ed"
        android:contentDescription="@string/historia"
        android:scaleType="fitCenter"
        android:src="@drawable/icono_n3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNivel2"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>